--- a/adopetme-monolitic-backend/pom.xml
+++ b/adopetme-monolitic-backend/pom.xml
@@ -56,7 +56,13 @@
             <artifactId>mockito-inline</artifactId>
             <version>5.2.0</version> <scope>test</scope>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
