--- a/adopetme-monolitic-backend/pom.xml
+++ b/adopetme-monolitic-backend/pom.xml
@@ -30,6 +30,7 @@
         <java.version>17</java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <flyway.version>9.22.3</flyway.version>
     </properties>
     <dependencies>
         <dependency>
