--- a/adopetme-monolitic-backend/src/main/resources/application.properties
+++ b/adopetme-monolitic-backend/src/main/resources/application.properties
@@ -55,3 +55,13 @@ app.oauth2.allowed-origins=${APP_CORS_ALLOWED_ORIGINS:http://localhost:3030}
 app.jwt.secret=${APP_JWT_SECRET}
 app.jwt.expiration-in-ms=${APP_JWT_EXPIRATION_MS:86400000}
 
+# -----------------------------------------------
+# CONFIGURAÇÕES DE E-MAIL (GMAIL)
+# -----------------------------------------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hondadanilo6@gmail.com
+# Use a variável de ambiente para a Senha de App
+spring.mail.password=${GMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
